# agent-locksmith

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  config.example.yaml
.github/ISSUE_TEMPLATE/: v2-task.yml
.github/workflows/: ci.yml  release.yml
benches/: audit_write_bench.rs
docs/plans/: 2026-03-08-m0-tool-api-proxy.md
docs/user/: README.md  architecture.md  cli-reference.md  getting-started.md
docs/user/agent-integration/: README.md  hermes.md  openclaw.md  skill-reference.md  wire-contract.md
docs/user/agent-integration/examples/: curl.md  python.md  typescript.md
docs/user/concepts/: README.md  agent-identity-and-acl.md  error-envelope.md  kind-taxonomy.md  oauth-flow.md  per-agent-credentials.md  trust-boundary.md
docs/user/operator/: 1password-setup.md
docs/v2/: HANDOFF.md  PRD.md  SPEC.md  SPEC.state.md  STATUS-2026-05-01.md  kickoff.md  roadmap.md  threat-model.md
docs/v2/runbooks/: m1-inference-hardening.md  m4-remote-management.md  m5-sealed-secrets.md  m6-mtls-migration.md  m6-mtls-onboarding.md  m6-mtls-revocation.md  m7-response-controls.md  m9-proxy-bearer-acl.md
migrations/: 0001_init.sql  0002_registrations.sql  0003_oauth_sessions.sql  0004_oauth_session_labels.sql  0005_agent_credential_overrides.sql  0006_oauth_session_account_id.sql
seed/: catalog.yaml
src/: agent_listener.rs  app.rs  argon2_helper.rs  audit_sink.rs  auth.rs  client_pool.rs  codex_body.rs  config.rs  daemon.rs  deprecation.rs  kamiwaza.rs  lib.rs  main.rs  migrations.rs  proxy.rs  response_controls.rs  shutdown.rs  skill.rs  skill_template.md  telemetry.rs  token.rs
src/admin/: bootstrap_listener.rs  https.rs  mod.rs  service.rs  uds.rs  uds_client.rs
src/auth_v2/: agent.rs  mod.rs  operator.rs
src/cli/: client.rs  main.rs  output.rs
src/cli/commands/: agent.rs  audit.rs  bootstrap.rs  bootstrap_operator.rs  export.rs  infra.rs  mod.rs  model.rs  mtls.rs  oauth.rs  registration.rs  self_svc.rs  tool.rs
src/mtls/: authenticator.rs  blocklist.rs  crl.rs  mod.rs  validator.rs
src/oauth/: admin.rs  jwt.rs  mod.rs  refresh.rs  sealing.rs  session.rs
src/registrations/: api.rs  auth_spec.rs  catalog.rs  kind.rs  legacy_bootstrap.rs  mod.rs  repo.rs  seed_loader.rs  validators.rs
src/repo/: agent.rs  agent_creds.rs  audit.rs  bootstrap.rs  mod.rs
src/secret/: aws.rs  backend.rs  env.rs  file_sealed.rs  mod.rs  vault.rs
tests/: admin_config_test.rs  admin_https_mtls_e2e_test.rs  admin_https_off_by_default_test.rs  admin_https_pem_load_test.rs  admin_https_test.rs  admin_uds_test.rs  agent_listener_mtls_e2e_test.rs  audit_admin_test.rs  audit_auth_method_test.rs  audit_failure_test.rs  audit_jsonl_test.rs  audit_proxy_test.rs  audit_retention_test.rs  auth_test.rs  auth_v2_test.rs  bootstrap_only_listener_test.rs  cli_admin_https_test.rs  cli_e2e_test.rs  cli_mtls_test.rs  cli_set_cert_identity_test.rs  config_strict_test.rs  config_test.rs  daemon_runtime_test.rs  deprecation_test.rs  discovery_test.rs  env_expansion_test.rs  health_test.rs  inference_matrix_cloud_test.rs  inference_matrix_local_test.rs  integration_test.rs  kamiwaza_test.rs  migrations_test.rs  mtls_authenticator_test.rs  mtls_blocklist_test.rs  mtls_config_test.rs  mtls_crl_test.rs  mtls_validator_test.rs  operator_mtls_test.rs  phase_e_admin_test.rs  phase_e_authless_test.rs  (+29 more)
