[package]
name = "agent-locksmith"
version = "0.1.0"
edition = "2024"
description = "Secure proxy for AI agent tool access with credential injection"
license = "MIT"
repository = "https://github.com/SentientSwarm/agent-locksmith"

[[bin]]
name = "locksmith"
path = "src/main.rs"

[dependencies]
arc-swap = "1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
getrandom = "0.3"
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
axum-test = "19"
bytes = "1"
futures-util = "0.3"
tokio-test = "0.4"
wiremock = "0.6"
