[package]
name = "agent-locksmith"
version = "2.3.0"
edition = "2024"
description = "Secure proxy for AI agent tool access with credential injection"
license = "MIT"
repository = "https://github.com/SentientSwarm/agent-locksmith"

[[bin]]
name = "locksmithd"
path = "src/main.rs"

[[bin]]
name = "locksmith"
path = "src/cli/main.rs"

[[bench]]
name = "audit_write_bench"
harness = false
path = "benches/audit_write_bench.rs"

[dependencies]
aes-gcm = "0.10"
arc-swap = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
rustls-pemfile = "2"
bytes = "1"
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
http-body-util = "0.1"
getrandom = "0.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
regex = "1"
sha2 = "0.10"
x509-parser = "0.16"
pem = "3"
webpki = { package = "rustls-webpki", version = "0.103", default-features = false, features = ["std", "ring"] }

[dev-dependencies]
axum-test = "19"
criterion = { version = "0.5", features = ["async_tokio"] }
rcgen = "0.13"
tempfile = "3"
time = { version = "0.3", features = ["macros"] }
tokio-test = "0.4"
wiremock = "0.6"
